[package]
name = "sql_to_graph"
version = "0.1.0"
edition = "2024"

[lib]
name = "sql_to_graph"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.27.0", features = ["extension-module"] }
pyo3-async-runtimes = { version = "0.27", features = ["tokio-runtime"] }
tokio = { version = "1", features = ["full"] }

# SQL parsing
sqlparser = "0.55"

# Database connectivity
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "mysql",
    "sqlite",
    "any",
] }

# Chart rendering (SVG only - rasterization done via resvg, avoids fontconfig)
plotters = { version = "0.3", default-features = false, features = [
    "svg_backend", "line_series", "area_series", "histogram", "point_series",
    "all_elements", "all_series", "full_palette",
] }
plotters-svg = "0.3"

# SVG to raster (no system-fonts to avoid fontconfig dep in cross-compilation)
resvg = { version = "0.44", default-features = false, features = ["raster-images", "text", "memmap-fonts"] }
tiny-skia = "0.11"

# Image encoding
image = { version = "0.25", features = ["png", "jpeg"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CSV export
csv = "1"

# Error handling
thiserror = "2"
