[build-system]
requires = ["maturin>=1.12,<2.0"]
build-backend = "maturin"

[project]
name = "sql-to-graph"
requires-python = ">=3.10"
description = "SQL auto-correction, optimization, execution, and chart generation. Rust-powered, agent-ready."
license = "MIT"
readme = "README.md"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Visualization",
]
dynamic = ["version"]
dependencies = [
    "langchain-core>=1.2.23",
    "toons>=0.5.3",
]

[project.urls]
Repository = "https://github.com/plutonium-guy/sql_to_graph"

[project.optional-dependencies]
llm = ["openai", "anthropic"]
langchain = ["langchain-core", "pydantic>=2"]
dev = ["pytest", "pytest-asyncio"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.maturin]
python-source = "python"
module-name = "sql_to_graph._native"
features = ["pyo3/extension-module"]
